v2 (Commit JJJJ): BankNifty strategy fires — parallel state, tick trigger, per-instrument fire
Phase 3 of the BankNifty rollout. Wires the strategy so BankNifty
5-min bars, tick triggers, and option-symbol fires flow through the
same 4-setup logic NIFTY uses, using the InstrumentConfig +
parallel state-field pattern chosen in JJJJ-scaffold.

Backend
- BalancedAtmSelector: added per-symbol + per-strike-step overloads.
  resolveOtmStrikeAtLevel(spotSymbol, strikeStep, level, side) does
  the same floor/ceil OTM rounding but against the caller-supplied
  strike step (50 for NIFTY, 100 for BANKNIFTY). fetchChain now has
  a symbol overload; the existing no-arg version delegates to NIFTY
  for backward compat. Fyers returns the nearest expiry when
  timestamp is empty — that naturally maps to NIFTY weekly OR
  BankNifty monthly depending on the symbol.

- Camarilla.java constructor: injected two new ObjectProviders for
  BankNiftyRsiService + BankNiftyAtrService.

- boot() now subscribes both NIFTY + BANKNIFTY spot to the candle
  aggregator, sets both state.futuresSymbol and
  state.bankNiftyFuturesSymbol, and calls both resolveSessionLegs
  + resolveBankNiftySessionLegs. Retry scheduler picks up both.

- resolveBankNiftySessionLegs(): mirror of resolveSessionLegs.
  Uses InstrumentConfig.BANKNIFTY strike step (100), fetches from
  the BANKNIFTY option chain, writes to the bankNifty* state
  fields, emits [INFO] Session BANKNIFTY Leg Strikes Resolved log.
  ensureBankNiftySessionLegsSubscribed() re-subscribes the four
  BankNifty legs on WS reconnect.

- onCandleClose refactored to a router:
    processNiftyBarPhases(c, lv)     — Phase 2/3/4 for NIFTY
    processBankNiftyBarPhases(c, lv) — Phase 2/3/4 for BankNifty
  Both apply the same expiry / invalidation / detect logic, just
  against their respective pending slots. Event log messages now
  carry [NIFTY] / [BANKNIFTY] prefix for setup transitions.

- tryFireTriggeredPending: iterates both instruments.
  Each pulls i